# rust_server

./: .env  .gitignore  Cargo.toml  README.md
prisma/: schema.prisma
prisma/migrations/20230623174226_gorcery_item/: migration.sql
prisma_cli/: Cargo.toml
server/: Cargo.toml
server/src/: controllers.rs  filters.rs  handlers.rs  main.rs  models.rs  store.rs
src/: controllers.rs  main.rs  store.rs
