[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.*"
parking_lot = "0.12.*"
serde = {version = "1.0.*", features = ["derive"]}
tokio = {version = "1.28.*", features = ["full"]}
dotenv = "0.15.*"
